@@ -1,0 +1,69 @@
+#include "apreq_version.h"
+
+#define APREQ_COPYRIGHT "Copyright 2008 The Apache Software " \
+                      "Foundation or its licensors, as applicable."
+
+#define APREQ_LICENSE "Licensed under the Apache License, Version 2.0 " \
+                    "(the ""License""); you may not use this file except " \
+                    "in compliance with the License.  You may obtain a " \
+                    "copy of the License at\r\n\r\n" \
+                    "http://www.apache.org/licenses/LICENSE-2.0\r\n\r\n" \
+                    "Unless required by applicable law or agreed to in " \
+                    "writing, software distributed under the License is " \
+                    "distributed on an ""AS IS"" BASIS, WITHOUT " \
+                    "WARRANTIES OR CONDITIONS OF ANY KIND, either " \
+                    "express or implied.  See the License for the " \
+                    "specific language governing permissions and " \
+                    "limitations under the License."
+
+#define APREQ_DLL_BASENAME "libapreq-" APR_STRINGIFY(APREQ_MAJOR_VERSION)
+#define APREQ_VERSION_STRING_CSV APREQ_MAJOR_VERSION ##, \
+                             ##APREQ_MINOR_VERSION ##, \
+                             ##APREQ_PATCH_VERSION
+
+
+1 VERSIONINFO
+ FILEVERSION APREQ_VERSION_STRING_CSV,0
+ PRODUCTVERSION APREQ_VERSION_STRING_CSV,0
+ FILEFLAGSMASK 0x3fL
+#if defined(APREQ_IS_DEV_VERSION)
+#if defined(_DEBUG)
+ FILEFLAGS 0x03L
+#else
+ FILEFLAGS 0x02L
+#endif
+#else
+#if defined(_DEBUG)
+ FILEFLAGS 0x01L
+#else
+ FILEFLAGS 0x00L
+#endif
+#endif
+#if defined(WINNT) || defined(WIN64)
+ FILEOS 0x40004L
+#else
+ FILEOS 0x4L
+#endif
+ FILETYPE 0x2L
+ FILESUBTYPE 0x0L
+BEGIN
+  BLOCK "StringFileInfo"
+  BEGIN
+    BLOCK "040904b0"
+    BEGIN
+    VALUE "Comments", APREQ_LICENSE "\0"
+      VALUE "CompanyName", "Apache Software Foundation\0"
+      VALUE "FileDescription", "Apache HTTP Server Request Library\0"
+      VALUE "FileVersion", APREQ_VERSION_STRING "\0"
+      VALUE "InternalName", APREQ_DLL_BASENAME "\0"
+      VALUE "LegalCopyright", APREQ_COPYRIGHT "\0"
+      VALUE "OriginalFilename", APREQ_DLL_BASENAME ".dll\0"
+      VALUE "ProductName", "Apache HTTP Server Project\0"
+      VALUE "ProductVersion", APREQ_VERSION_STRING "\0"
+    END
+  END
+  BLOCK "VarFileInfo"
+  BEGIN
+    VALUE "Translation", 0x409, 1200
+  END
+END
